--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>untitled folder</title>
+    <title>boilerplate-simple-webapp</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -40,7 +40,7 @@
             <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
-        <h3 class="text-muted">untitled folder</h3>
+        <h3 class="text-muted">boilerplate-simple-webapp</h3>
       </div>
 
       <div class="jumbotron">
