--- a/app/index.html
+++ b/app/index.html
@@ -28,46 +28,37 @@
     <![endif]-->
     
     <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills float-right">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
-          </li>
-          <li>
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li>
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-        <h3 class="text-muted">boilerplate-simple-webapp</h3>
-      </div>
-
-      <div class="jumbotron">
-        <h1 class="display-3">'Allo, 'Allo!</h1>
-        <p class="lead">Always a pleasure scaffolding your apps.</p>
-        <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
-      </div>
-
-      <div class="row marketing">
-        <div class="col-lg-6">
-          <h4>HTML5 Boilerplate</h4>
-          <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
-
-          <h4>Sass</h4>
-          <p>Sass is the most mature, stable, and powerful professional grade CSS extension language in the world.</p>
-
-          <h4>Bootstrap</h4>
-          <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
-
-          <h4>Modernizr</h4>
-          <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
-        </div>
-      </div>
-
-      <div class="footer">
-        <p>♥ from the Yeoman team</p>
-      </div>
+      <h3>This is your simple webapp</h3>
+      <h5>The following come standard:</h5>
+      <ul>
+        <li>
+          <div>Libraries</div>
+          <ul>
+            <li>jQuery</li>
+            <li>Bootstrap 4</li>
+            <li>Modernizer</li>
+          </ul>
+        </li>
+        <li>
+          <div>CSS Tools</div>
+          <ul>
+            <li>Sass</li>
+            <li>Auto-Prefixer</li>
+            <li>CSS Nano</li>
+          </ul>
+        </li>
+        <li>
+          <div>Build Tools</div>
+          <ul>
+            <li>Gulp</li>
+            <li>Browser Sync</li>
+            <li>Yarn</li>
+            <li>Bower</li>
+            <li>ESLint</li>
+            <li>Babel</li>
+          </ul>
+        </li>
+      </ul>
     </div>
     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
