adds features and components directories to styles and includes index in main.scss

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
           <ul>
             <li>jQuery</li>
             <li>Bootstrap 4</li>
-            <li>Modernizer</li>
+            <li>Modernizr</li>
           </ul>
         </li>
         <li>
