adds icons and icon BEM classes to boilerplate template

--- a/app/index.html
+++ b/app/index.html
@@ -61,14 +61,35 @@
         </li>
       </ul>
 
-      <svg class="icon">
+      <svg class="icon__size-xs">
         <use xlink:href="#icon-profile-about" />
       </svg>
-      <svg class="icon">
-        <use xlink:href="#icon-profile-projects" />
+      <svg class="icon__size-xs-sm">
+        <use xlink:href="#icon-profile-about" />
       </svg>
-      <svg class="icon">
-        <use xlink:href="#icon-profile-social" />
+      <svg class="icon__size-sm">
+        <use xlink:href="#icon-profile-about" />
+      </svg>
+      <svg class="icon__size-sm-md">
+        <use xlink:href="#icon-profile-about" />
+      </svg>
+      <svg class="icon__size-md">
+        <use xlink:href="#icon-profile-about" />
+      </svg>
+      <svg class="icon__size-md-lg">
+        <use xlink:href="#icon-profile-about" />
+      </svg>
+      <svg class="icon__size-lg">
+        <use xlink:href="#icon-profile-about" />
+      </svg>
+      <svg class="icon__size-lg-xl">
+        <use xlink:href="#icon-profile-about" />
+      </svg>
+      <svg class="icon__size-xl">
+        <use xlink:href="#icon-profile-about" />
+      </svg>
+      <svg class="icon__size-xl-xxl">
+        <use xlink:href="#icon-profile-about" />
       </svg>
     </div>
     
